<resources>
    <string name="app_name">Game2048</string>
    <string name="new_game">Nuevo Juego</string>
    <string name="score">Puntaje</string>
    <string name="max">Maximo</string>
    <string name="initial_value">0</string>
    <string name="facebook_app_id">1537951019575774</string>
    <string name="fb_login_protocol_scheme">fb1537951019575774</string>
    <string name="welcome">Bienvenido</string>
    <string name="cancel_login">Se canceló la operación</string>
    <string name="error_login">Ocurrió un error al ingresar</string>
    <string name="logout">Cerrar sesión</string>
    <string name="firebase_error_login">Error al iniciar sesión en Firebase</string>
    <string name="ranking">Ranking</string>
    <string name="level">Nivel</string>
</resources>
